--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+.DS_Store
+node_modules/
+.env
+*.orig
+.idea/
+.vscode/
+.atom/
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
