--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client2",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,5 +25,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:7000"
+  "proxy": "http://localhost:8000"
 }
