--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0"
-  }
+  },
+  "scripts": {
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+},
+"engines": {
+    "node": "8.10.0"
+}
 }
